<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="52dp"
    android:background="@drawable/bar" >

    <Button
        android:id="@+id/backbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/back"
        android:gravity="center_vertical" >
        
    </Button>
    
</LinearLayout>

         <View android:layout_width="fill_parent"
    android:layout_height="5dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:weightSum="100"
	android:gravity="center">
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:src="@drawable/patient"/>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:orientation="vertical"
	android:layout_weight="30">
  
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_id" />

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/patient_name" 
		/>
       <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/patient_age" 
        />
    </LinearLayout>
   <View android:layout_width="3dp"
    android:layout_height="fill_parent"/>
      <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_weight="30">
      <TextView 
        android:id="@+id/tvPatientID"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
		/>
        

        <TextView 
            android:id="@+id/tvPatientName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="John Doe"/>
   
        <TextView 
            android:id="@+id/tvPatientAge"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="45"/>
        
    </LinearLayout>
</LinearLayout>
<ScrollView 
  android:id="@+id/scroll" 
  android:layout_width="match_parent"
  android:layout_height="match_parent"
    >
      <LinearLayout 
      android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
          >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="28dp"
    android:background="@drawable/bar2"
    android:gravity="center"
    android:text="Recent Records" />

<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab"       
        >
    
      <TableRow
           android:id="@+id/tableRow3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:weightSum="100"
         android:layout_margin="1dp">
                  
          <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/date"
              android:gravity="center_horizontal"
              android:layout_gravity="center_vertical"
              android:layout_weight="25"
                     android:layout_margin="1dp"
              android:background="#BDBDBD"
              />
         <TextView 
             
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="75"
              android:layout_gravity="center_vertical"
              android:text="@string/action"
              android:background="#BDBDBD"
              
              />
     
          </TableRow>    
    
</TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bar2"
        android:gravity="center"
        android:text="Allergies" />

    <TextView
        android:id="@+id/allergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Allergy 1 " />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:background="@drawable/bar2"
        android:gravity="center"
        android:text="Chronic Diseases" />

    <TextView
        android:id="@+id/chronic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:text="Diabetic 1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bar2"
        android:gravity="center"
        android:text="Drugs Taking" />

    <TextView
        android:id="@+id/drug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drug taking " />
    </LinearLayout>
    </ScrollView>
</LinearLayout>